--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-.vscode
-/data/
-
-**.tar.tz
-**.tz
-data**
-*.py[cod]
-*.so
-*.egg
-*.egg-info
-dist
-build
+*.swp
+*.pyc
+__pycache__
+*.tar
+**/exp-*
+checkpoint*
+events*
+log*.txt
+.idea
+save
